--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,3 +1,4 @@
+user_name=foden
 user_id=31c3hrbpm75afpco7533kex5fhyi
 client_id=b6e51ba10aa646e49d01abe4f20ee8de
 client_secret=6bdade38d74a49c0ab20e83b61d3bece
