--- a/pom.xml
+++ b/pom.xml
@@ -68,6 +68,14 @@
             <artifactId>allure-testng</artifactId>
             <version>2.29.1</version>
         </dependency>
+
+        <!-- https://mvnrepository.com/artifact/io.qameta.allure/allure-rest-assured -->
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-rest-assured</artifactId>
+            <version>2.29.1</version>
+        </dependency>
+
     </dependencies>
 
     <build>
