--- a/pom.xml
+++ b/pom.xml
@@ -111,6 +111,8 @@
                             <!--suppress UnresolvedMavenProperty -->
                             <suiteXmlFile>${suiteXmlFile}</suiteXmlFile>
                         </suiteXmlFiles>
+<!--                        <parallel>methods</parallel>-->
+<!--                        <threadCount>10</threadCount>-->
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         </argLine>
