--- a/pom.xml
+++ b/pom.xml
@@ -83,6 +83,12 @@
             <version>1.0.2</version>
         </dependency>
 
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.19</version>
+        </dependency>
+
     </dependencies>
 
     <build>
